# sketchy

./: .travis.yml  Cargo.toml  LICENSE  README.md  deploy.sh
benches/: benches.rs
src/: bloomfilter.rs  countmin.rs  hash.rs  hyperloglog.rs  lib.rs  reservoir.rs  topk.rs
