[package]

name = "sketchy"
description = "A set of probabilistic sketch data structures."
readme = "README.md"
version = "0.0.2"
authors = ["Coda Hale <coda.hale@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/codahale/sketchy"

[dependencies]
rand = "0.5"
bit-vec = "0.5"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benches"
harness = false
